--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://osman:osman@clusterz.mmufj7d.mongodb.net/?retryWrites=true&w=majority&appName=ClusterZ
+RESEND_API_KEY=re_BUsfmo5Q_AUKWrPcZ2fbCTvMkaQCBjzjb
