--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
 MONGODB_URI=mongodb+srv://osman:osman@clusterz.mmufj7d.mongodb.net/?retryWrites=true&w=majority&appName=ClusterZ
 RESEND_API_KEY=re_BUsfmo5Q_AUKWrPcZ2fbCTvMkaQCBjzjb
 NEXTAUTH_SECRET=
+OPENAI_API_KEY=
+OPENAI_PROMPT="Create a list of four open-ended and engaging questions
+formatted as a single string. Each question should be separated by '||'.
+These questions are for an anonymous social messaging platform, like Qooh.me,
+and should be suitable for a diverse audience. Avoid personal or sensitive topics,
+focusing instead on universal themes that encourage friendly interaction. 
+For example, your output should be structured like this:
+'whats's a hobby you've recently started? || If you could have dinner with
+any historical figure, who would it be? || What's a simple thing that makes
+you happy?'. Ensure the questions are intriguing, foster curiosity, and contribute
+to a positive and welcoming conversational environmet."
