--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.21",
+    "ai": "^3.2.17",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.5",
