add home,delete route, dashboard, messagecard, navbar:

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://osman:osman@clusterz.mmufj7d.mongodb.net/?retryWrites=true&w=majority&appName=ClusterZ
 RESEND_API_KEY=re_BUsfmo5Q_AUKWrPcZ2fbCTvMkaQCBjzjb
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=a1b2c3z1
 OPENAI_API_KEY=
 OPENAI_PROMPT="Create a list of four open-ended and engaging questions
 formatted as a single string. Each question should be separated by '||'.
