--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGODB_URI=mongodb+srv://osman:osman@clusterz.mmufj7d.mongodb.net/?retryWrites=true&w=majority&appName=ClusterZ
 RESEND_API_KEY=re_BUsfmo5Q_AUKWrPcZ2fbCTvMkaQCBjzjb
 NEXTAUTH_SECRET=a1b2c3z1
-OPENAI_API_KEY=
+OPENAI_API_KEY=dhka2ohslkngklrsn4
 OPENAI_PROMPT="Create a list of four open-ended and engaging questions
 formatted as a single string. Each question should be separated by '||'.
 These questions are for an anonymous social messaging platform, like Qooh.me,
@@ -12,3 +12,4 @@ For example, your output should be structured like this:
 any historical figure, who would it be? || What's a simple thing that makes
 you happy?'. Ensure the questions are intriguing, foster curiosity, and contribute
 to a positive and welcoming conversational environmet."
+
